feat(#610): fix compilation errors